tests/references/ill-typed/unexpected-memory-address-4.stella
language core;

extend with #references;

fn main(b : Bool) -> Bool {
  return <0xABCDEF>
}